Fix scrollbar on terminal

--- a/frontend/src/components/Terminal/Terminal.scss
+++ b/frontend/src/components/Terminal/Terminal.scss
@@ -1,23 +1,23 @@
 .terminal {
-  //   &::-webkit-scrollbar {
-  //     width: 10px;
-  //   }
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
 
-  //   /* Track */
-  //   &::-webkit-scrollbar-track {
-  //     box-shadow: inset 0 0 5px grey;
-  //     border-radius: 10px;
-  //     // background-color: white;
-  //   }
+  /* Track */
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+    // background-color: white;
+  }
 
-  //   /* Handle */
-  //   &::-webkit-scrollbar-thumb {
-  //     background: #202020;
-  //     border-radius: 10px;
-  //   }
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: #202020;
+    border-radius: 10px;
+  }
 
-  //   /* Handle on hover */
-  //   &::-webkit-scrollbar-thumb:hover {
-  //     // background: #b30000;
-  //   }
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    // background: #b30000;
+  }
 }
